# Rain-and-Precipitation-Prediction-API

./: Makefile  README.md  github.txt  pyproject.toml  requirements.txt
amla_at2_experiments/: __init__.py  dataset.py  features.py  plots.py
amla_at2_experiments/modeling/: predict.py  train.py
models/precipitation_fall/: best_precipitation_reg_pipeline.joblib  meta.json  sgd[a=0.0003,l1=0.05].joblib
models/rain_or_not/: best_cls_pipeline.joblib  best_rain_cls_pipeline.joblib  meta.json
notebooks/data/processed/: X_test.csv  X_train.csv  X_val.csv  y_train.csv  y_val.csv
notebooks/data/raw/: sydney_daily_2010-01-01_2024-12-31.csv
notebooks/precipitation_fall/: 36120-25SP-25238736-experiment-2.ipynb  36120-25SP-25238736-experiment-2.ipynb.ipynb
notebooks/precipitation_fall/data/processed/: X_test.csv  X_train.csv  X_val.csv  y_test.csv  y_train.csv  y_val.csv
notebooks/precipitation_fall/data/raw/: sydney_daily_2015_2024.csv
notebooks/rain_or_not/: 36120-25SP-25238736-experiment-1.ipynb  36120-25SP-25238736-experiment-1.ipynb.ipynb
notebooks/rain_or_not/data/processed/: y_test.csv
