[project]
name = "amla-at2-experiments"
version = "0.1.0"
description = ""
authors = [
    {name = "NaynaJahan",email = "naynajahanneha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas (==2.2.2)",
    "scikit-learn (==1.5.1)",
    "jupyterlab (==4.2.3)",
    "joblib (==1.4.2)",
    "requests (==2.32.3)",
    "pyarrow (==16.1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
